Fix missing borders

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -64,14 +64,14 @@
   line-height:120%;
 }
 
-/*.btn {
+.btn {
   background-color:rgba(45, 62, 79, 1);
   color:rgba(235, 239, 240, 1);
 }
 
 .btn:hover {
    color: #FFFFFF;
-}*/
+}
 
 .form-signin-heading {
   margin-right:0px;
@@ -106,7 +106,7 @@ body {
 }
 
 img {
-   border:3px solid rgba(235, 239, 240, 1);
+   border:3px solid #FFFFFF;
    max-width:100%;
    height:auto;
 }
